*merlin-2.2 (07 Jun 2015)

  07 Jun 2015; Guillaume Horel <guillaume.horel@gmail.com> +merlin-2.2.ebuild,
  +metadata.xml, -merlin-1.7.ebuild:
  dev-ml/merlin: version bump