@@ -1,1 +1,1 @@
-DIST v2.2.tar.gz 2942553 SHA256 18278c95f9e3c32855a15fc5e14ac349a34001b6d3ab8833bdacaa0a6806562d SHA512 b50a99de775cf2afd6c8aca8d9e3aa95ee978daab71c1f8af14ddedaa9f9eb04aa1c6ca261d2c11c1170afeec081049b45fc9d3ff05c2563a475907b03d8d588 WHIRLPOOL 573a1f4f100f5a9a019d21190694a4faadc3315e95ed99451ffbd68e0ccd38e0a9afc3488d2e607521f873c460f85f2e3099eb5ec464a063690f6764a8031b08
+DIST v2.5.1.tar.gz 2391390 SHA256 1a6ef9c5c9b5e6bdac4d50be39e8c2b663a2e87fa76e9c8fb309d346418ff9c3 SHA512 d8fb74e58be176b4de922969a291f787d31a990b949e68bbf492e2409367bfe6da2a69790cd11f45f1ff68f71f46639dd11b2a5146169e01df59bf51b603f71b WHIRLPOOL 2cbcbf2ee71e6dec6295da4c2064836f87ed5519179314d71f61bf3a1356ea2785c467edbbd86ed52f135cbe0a71de9b4ddbbc2a5c424c170d709f2a0a2b7dba
