@@ -1,3 +1,9 @@
+*merlin-2.5.1 (11 Nov 2016)
+
+  11 Nov 2016; Guillaume Horel <guillaume.horel@gmail.com> +merlin-2.5.1.ebuild,
+  -merlin-2.2.ebuild, metadata.xml:
+  dev-ml/merlin: version bump
+
 *merlin-2.2 (07 Jun 2015)
 
   07 Jun 2015; Guillaume Horel <guillaume.horel@gmail.com> +merlin-2.2.ebuild,
